# CubeMX2CMake

./: CMakeLists.txt  README.md  mk2cmake.py
template/: CMakeLists.txt
